--- a/MandelbrotAPI/Properties/launchSettings.json
+++ b/MandelbrotAPI/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7138;http://localhost:5275",
+      "applicationUrl": "https://127.0.0.1:7138;http://127.0.0.1:5275",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
