--- a/MandelbrotAPI/MandelbrotAPI.csproj
+++ b/MandelbrotAPI/MandelbrotAPI.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Properties\Settings_def.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
