--- a/MandelbrotAPI/appsettings.json
+++ b/MandelbrotAPI/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "remotes": "http://localhost:5275"
+  
 }
